# opengl-bug

./: CMakeLists.txt  gl_helper.h  main.cpp  main.cu
ext/glad-3.3-core/include/glad/: glad.h
ext/glad-3.3-core/src/: glad.c
